actualizacion de las ventanas
se cambiaron las ventanas a las cuales se redirecciona en el menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
       <ion-content>
         <ion-list id="inbox-list">
           <div id="logo">
-            <img src="assets/img/Uceva_Vertical.png">
+            <img src="assets/img/avatar.jpeg" routerLink="Perfil">
+        
           </div>
           <br>
 
