--- a/src/app/pages/Perfil/perfil.page.html
+++ b/src/app/pages/Perfil/perfil.page.html
@@ -8,6 +8,15 @@
 </ion-header>
 
 <ion-content>
- 
-  
+  <br>
+  <div id="logo">
+    <img src="assets/img/avatar.jpeg" >
+  </div>
+  <br>
+  <h1>Estado</h1>
+  <div id="logo">
+    <img src="assets/img/Uceva_Vertical.png" >
+  </div>
+  <br>
+  <br>
 </ion-content>
