--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,20 +4,19 @@
     <ion-menu contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <div id="logo">
+         
+          <ion-menu-toggle id="logo">
             <img src="assets/img/avatar.jpeg" routerLink="Perfil">
-        
-          </div>
+          
+          </ion-menu-toggle>
           <br>
-
+          
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-
-            <ion-item (click)="selectedIndex=i" routerDirection="root" [routerLink]="[p.url]" lines="none"
-              detail="false" [class.selected]="selectedIndex == i">
+            <ion-item (click)="selectedIndex=i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
+              [class.selected]="selectedIndex == i">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
-
           </ion-menu-toggle>
 
         </ion-list>
@@ -25,4 +24,5 @@
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
-</ion-app>
+ 
+</ion-app> 
