--- a/src/app/pages/Perfil/perfil.page.scss
+++ b/src/app/pages/Perfil/perfil.page.scss
@@ -2,12 +2,18 @@ ion-content{
     display: block;
     text-align: center;
 }
-#gauge{
-    margin:auto;
-    height: 300px;
-     width: 300px;
-     display: flex;
-    justify-content: center;
-     align-items: center;
-     border: 1px solid blue;
+#logo{
+    
+    background-color: white;
+    margin: auto;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 50%;
+    img{
+        width: 200px;
+        height: 200px;
+        margin:auto;
     }
+
+}
