--- a/src/app/pages/Reportes/reports.page.html
+++ b/src/app/pages/Reportes/reports.page.html
@@ -8,7 +8,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-button color="secondary" (click)="hide()" [hidden]="!mostrarForm">Agregar</ion-button>
+  
+  <ion-buttons slot="primary">
+    <ion-button > <!-- (click)="clickedSearch()" -->
+      <ion-icon slot="icon-only" name="search"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+  <ion-searchbar placeholder="Search Favorites"></ion-searchbar>
+ 
   <div [hidden]="!mostrarForm" >
     <table class="table table-bordered">
       <thead>
@@ -68,3 +75,9 @@
       <button ion-button block type="submit" [disabled]="!myForm.valid">Guardar</button>
     </div>
   </form>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="scan-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
