--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,10 +3,127 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>UCEVA</ion-title>
+    <ion-title>HOME</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <iframe src="http://www.uceva.edu.co/" frameborder="0" height="100%" width="100%"></iframe>
+  <img src="assets/img/covi19_1-1046x588.png">
+
+  <ion-list>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/iconfinder_39_Microsoft_News_Feed_5764211.png">
+      </ion-thumbnail>
+    <ion-label class="ion-text-wrap">
+      Manténgase al día de la información más reciente sobre el brote de COVID-19
+    </ion-label>
+  </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+          <img src="assets/img/virus_covid_corona_clean_handwash_icon_141668.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Lávese las manos a fondo y con freciencia, usando un desinfectante a base de alcohol
+        o con agua y jabón
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/virus_covid_door_spray_hygiene_icon_141683.png">
+      </ion-thumbnail>  
+      <ion-label class="ion-text-wrap">
+        Limpie de manera constante las encimeras de la cocina y los escritorios de su casa y trabajo,
+         use desinfectante al hacerlo
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/virus_covid_corona_cough_breath_icon_141666.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Toser o estornudar en un pañuelo de papel y tirarlo inmediatamente en un contenedor de basura 
+        cerrado, inmediatamente después lávese las manos con agua y jabón, o use antibacterial
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/people_virus_protection_distance_covid_icon_141692.png">
+      </ion-thumbnail>
+        <ion-label class="ion-text-wrap">
+        Mantenga una distancia mínima de un metro (tres pies) entre usted y cualquier persona
+        cuando se encuentre fuera de su hogar
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/people_virus_mask_protect_covid_icon_141691.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Cubrirse la boca y la nariz con el tapaboca al ingresar en lugares muy concurridos,
+        donde se encuentren enfermos o personas mayores de 60 años
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/virus_covid_corona_eye_coronavirus_icon_141698.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Evite tocarse la cara sobre todo la zona de ojos, nariz y boca
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/virus_covid_travel_coronavirus_warning_briefcase_icon_141688.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Absténgase de viajar si tiene síntomas de enfermedades respiratorias como tos o fiebre, en caso de 
+        presentar síntomas durante el vuelo, informe de manera inmediata a la tripulación
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+       <img src="assets/img/people_virus_spreading_corona_covid_icon_141669.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Evite zonas demasiado concurridas o lugares donde haya personas infectadas
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/virus_covid_corona_breath_tempurature_icon_141696.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+       Si tiene fiebre, tos y difilcultad para respirar, busque atención médica
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="assets/img/drug_virus_covid_corona_health_icon_141670.png">
+      </ion-thumbnail>
+      <ion-label class="ion-text-wrap">
+        Siga las indicaciones de las autoridades sanitarias pertinentes a nivel nacional,
+        local o de su empleador para protegerse a sí mismo y a los demás
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="scan-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
