--- a/src/app/pages/autoevaluacion/autoevaluacion.page.html
+++ b/src/app/pages/autoevaluacion/autoevaluacion.page.html
@@ -3,11 +3,144 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Autoevaluacion</ion-title>
+    <ion-title>AUTOEVALUACION</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
- 
-  
+<ion-content fullscreen>
+
+  <form>
+    <ion-list>
+      <ion-list-header>
+        <ion-label>Al llenar este formulario, usted va a conocer la
+          pobrobabilidad de tener o no COVID-19</ion-label>
+      </ion-list-header>
+
+      <!----------------------------------------------------------------------------->
+      <ion-radio-group value="no">
+        <p>¿Ha salido de su casa en los últimos 14 dias?</p>
+        <ion-item>
+          <ion-label>Si</ion-label>
+          <ion-radio slot="start" value="si"></ion-radio>
+        </ion-item>
+        <ion-item>
+          <ion-label>No</ion-label>
+          <ion-radio slot="start" value="no"></ion-radio>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>¿Donde?</ion-label>
+          <ion-select interface="action-sheet" placeholder="Escoja uno">
+            <ion-select-option value="red">Portales del Río</ion-select-option>
+            <ion-select-option value="purple">Bosque</ion-select-option>
+            <ion-select-option value="oi">Victoria</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>¿Hace cuento?</ion-label>
+          <ion-datetime value="2020-03-01" placeholder="Select Date"></ion-datetime>
+        </ion-item>
+      </ion-radio-group><br>
+
+      <!----------------------------------------------------------------------------->
+      <ion-radio-group value="no">
+        <p>¿He tenido contacto con una persona que haya tenido síntomas gripales
+          y que haya venido del extranjero?</p>
+        <ion-item>
+          <ion-label>Si</ion-label>
+          <ion-radio slot="start" value="si"></ion-radio>
+        </ion-item>
+        <ion-item>
+          <ion-label>No</ion-label>
+          <ion-radio slot="start" value="no"></ion-radio>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>¿De qué país viene la persona?</ion-label>
+          <ion-select interface="action-sheet" placeholder="Escoja uno">
+            <ion-select-option value="red">Portales del Río</ion-select-option>
+            <ion-select-option value="purple">Bosque</ion-select-option>
+            <ion-select-option value="oi">Victoria</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Fecha de contacto</ion-label>
+          <ion-datetime value="2020-03-01" placeholder="Select Date"></ion-datetime>
+        </ion-item>
+      </ion-radio-group><br>
+
+      <!----------------------------------------------------------------------------->
+      <ion-radio-group value="no">
+        <p>¿Ha tenido contacto directo con personas diagnosticada con COVID-19?</p>
+        <ion-item>
+          <ion-label>Si</ion-label>
+          <ion-radio slot="start" value="si"></ion-radio>
+        </ion-item>
+        <ion-item>
+          <ion-label>No</ion-label>
+          <ion-radio slot="start" value="no"></ion-radio>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating"></ion-label>
+          <ion-input placeholder="Nombre y apellido de la persona"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Fecha de contacto</ion-label>
+          <ion-datetime value="2020-03-01" placeholder="Select Date"></ion-datetime>
+        </ion-item>
+      </ion-radio-group><br>
+
+      <!----------------------------------------------------------------------------->
+      <p>¿Usted presenta uno o más de estos síntomas?</p>
+      <ion-item>
+        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-label>Tos</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-label>Fiebre mayor a 38 grados</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-label>Dolor de graganta</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-label>Malestar para respirar</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-label>Malestar general</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-checkbox slot="start"></ion-checkbox>
+        <ion-label>Ninguno</ion-label>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="stacked"></ion-label>
+        <ion-input placeholder="Nombre"></ion-input>
+        <ion-input placeholder="apellido"></ion-input>
+        <ion-input placeholder="Edad"></ion-input>
+        <ion-input placeholder="N° de Documento"></ion-input>
+        <ion-input placeholder="Nacionaalidad"></ion-input>
+        <ion-input placeholder="Teléfono"></ion-input>
+        <ion-input placeholder="Dirección"></ion-input>
+        <ion-input placeholder="EPS"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label>Fecha de inicio de los síntomas</ion-label>
+        <ion-datetime value="2020-03-01" placeholder="Select Date"></ion-datetime>
+      </ion-item>
+    </ion-list>
+
+    <div padding>
+      <ion-button expand="block" type="submit" (click)= "presentConfirm()">Envíar evaluación</ion-button>
+    </div><br>
+
+  </form>
 </ion-content>
