--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -8,5 +8,5 @@
   <br>
   <h1>Bienvenido</h1>
   <button (click)="loginGoogle('Google')"> Gooogle </button>
-  <button (click)="loginGoogle('Facebook')"> Facebook </button>
+  <button (click)="ingresar1('Facebook')"> Facebook </button>
 </ion-content>
