--- a/src/app/components/login/login.page.html
+++ b/src/app/components/login/login.page.html
@@ -1,12 +1,21 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <br>
-  <h1>Bienvenido</h1>
-  <button (click)="loginGoogle('Google')"> Gooogle </button>
-  <button (click)="ingresar1('Facebook')"> Facebook </button>
+  <h1>Bienvenido a su autoevaluación</h1>
+  <br><br> <br>
+  <ion-button (click)="loginGoogle('Google')" expand="block" color="tertiary"> 
+    
+    Iniciar con Gooogle 
+  </ion-button>
+
+  <ion-button (click)="ingresar1('Facebook')" expand="block" color="tertiary">
+    
+     Iniciar conFacebook 
+    </ion-button>
+
 </ion-content>
