--- a/src/app/pages/Perfil/perfil.page.html
+++ b/src/app/pages/Perfil/perfil.page.html
@@ -13,9 +13,9 @@
     <img src="assets/img/avatar.jpeg" >
   </div>
   <br>
-  <h1>Estado</h1>
+  <ion-label color= "success" ><h1>Estado</h1></ion-label>
   <div id="logo">
-    <img src="assets/img/Uceva_Vertical.png" >
+    <img src="assets/img/sign-check-icon_34365.png" >
   </div>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
