--- a/src/app/pages/Reportes/reports.page.html
+++ b/src/app/pages/Reportes/reports.page.html
@@ -26,13 +26,13 @@
       </tr>
     </thead>
     <tbody>
-      <ng-container>
+      <ng-container *ngFor="let item of evaluaciones">
         <tr>
           <td>
-            <h5>65255A</h5>
+            <h5>{{n}}</h5>
           </td>
           <td>
-            <h5>{{evaluacion.fechaActual}}</h5>
+            <h5>{{item.fechaActual}}</h5>
           </td>
         </tr>
       </ng-container>
