--- a/src/app/pages/lugares/lugares.page.html
+++ b/src/app/pages/lugares/lugares.page.html
@@ -25,13 +25,13 @@
       </tr>
     </thead>
     <tbody>
-      <ng-container>
+      <ng-container *ngFor="let item of evaluaciones">
         <tr>
           <td>
-            <h5>{{evaluacion.p1salida}}</h5>
+            <h5>{{item.p1salida}}</h5>
           </td>
           <td>
-            <h5>{{evaluacion.p1fecha}}</h5>
+            <h5>{{item.p1fecha}}</h5>
           </td>
         </tr>
       </ng-container>
